fixed wrong height distribution on header slide

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,7 +46,7 @@ html, body#index {
 	#pull-tab {
 		position: absolute;
 		right: 10px;
-		color: #ccc;
+		color: gray;
 	}
 
 /*---------CALENDAR---------*/
